--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <title>My Astro Tab</title>
   </head>
   <body>
-    <div id="root">Hey React</div>
+    <div id="root"></div>
 
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="././src/App.js"></script>
   </body>
 </html>
