Basic custom hook

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="./index.css" rel="stylesheet" />
 
     <meta name="robots" content="index" />
-    <title>My Astro Tab</title>
+    <title>My Resto App</title>
   </head>
   <body>
     <div id="root"></div>
